jsonschemadsl2ecore.trafo.opt/test/test09/invalidtests/example7.test9
{
	"job":{
		"role":null,
		"level":1.0
	}
}